@@ -1,85 +1,0 @@
-<window id="3000">
-	<defaultcontrol>90</defaultcontrol>
-	<allowoverlay>no</allowoverlay>
-	<controls>
-		<control type="image">
-			<posx>0</posx>
-			<posy>0</posy>
-			<width>1280</width>
-			<height>720</height>
-			<texture>Background.png</texture>
-		</control>
-		<control type="image">
-			<posx>0</posx>
-			<posy>0</posy>
-			<width>1280</width>
-			<height>720</height>
-			<texture>Frontground.png</texture>
-		</control>
-		<control type="group">
-			<include>Window_OpenClose_Animation</include>
-			<control type="image">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>1280</width>
-				<height>720</height>
-				<texture border="40">DialogBack.png</texture>
-			</control>
-			<control type="image">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>1280</width>
-				<height>720</height>
-				<texture border="40">DialogFront.png</texture>
-			</control>
-			<control type="label" id="3">
-				<description>Title</description>
-				<posx>0</posx>
-				<posy>40</posy>
-				<width>1280</width>
-				<height>30</height>
-				<align>center</align>
-				<aligny>center</aligny>
-				<textcolor>white</textcolor>
-				<shadowcolor>black</shadowcolor>
-				<label>title</label>
-				<font>font18</font>
-			</control>
-            <control type="image">
-                <posx>382</posx>
-                <posy>75</posy>
-                <width>510</width>
-                <height>8</height>
-                <texture>StreakBlueFull.png</texture>
-            </control>
-			<control type="textbox" id="5">
-				<description>textarea</description>
-				<posx>45</posx>
-				<posy>95</posy>
-				<width>1175</width>
-				<height>530</height>
-				<pagecontrol>90</pagecontrol>
-                <textcolor>white</textcolor>
-                <shadowcolor>black</shadowcolor>
-				<font>font12</font>
-			</control>
-            <control type="group">
-                <posx>90r</posx>
-                <posy>660</posy>
-                <control type="spincontrol" id="90">
-                    <description>Next page button</description>
-                    <posx>0</posx>
-                    <posy>0</posy>
-                    <subtype>page</subtype>
-                    <font>font12b</font>
-                    <onleft>5</onleft>
-                    <onright>5</onright>
-                    <ondown>90</ondown>
-                    <onup>50</onup>
-                    <textcolor>white</textcolor>
-                    <showonepage>true</showonepage>
-                </control>
-            </control>
-		</control>
-	</controls>
-</window>
